--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -11,9 +11,8 @@
     // transition: ease-in-out 0.5s all;
     cursor: pointer;
 
-    &:hover,
     &:focus {
-        background-color: $primary-color;
-        color: #fff;
+        box-shadow: 0 0 3px $primary-color;
+
     }
 }
