--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #237BEF;
 $secondary-color: #191A39;
+$preloading-color: rgba($primary-color, 0.5);
+$error-color: #EB5757;
 $border-color: #A0A0A0;
 $overlay-color: rgba(0, 0, 0, 0.85);
 
