--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body {
 .input {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: none;
   display: block;
   width: 330px;
   padding: 11px 11px;
@@ -41,6 +42,22 @@ body {
   border: 1px solid #237BEF;
 }
 
+.input:focus::-webkit-input-placeholder {
+  font-size: 0;
+}
+
+.input:focus:-ms-input-placeholder {
+  font-size: 0;
+}
+
+.input:focus::-ms-input-placeholder {
+  font-size: 0;
+}
+
+.input:focus::placeholder {
+  font-size: 0;
+}
+
 .input:focus + label {
   display: block;
 }
@@ -49,22 +66,12 @@ body {
   border: 1px solid #EB5757;
 }
 
-.input--error + label {
-  display: block;
-  color: #EB5757;
-}
-
 .input--error:focus {
   border: 1px solid #EB5757;
 }
 
 .input--preloading {
   border: 1px solid rgba(35, 123, 239, 0.5);
-}
-
-.input--preloading:focus + label {
-  display: block;
-  color: rgba(35, 123, 239, 0.5);
 }
 
 .auth-form {
@@ -209,15 +216,27 @@ body {
   cursor: pointer;
   width: 23px;
   height: 13px;
-  background-image: url("../img/eye.svg");
-  background-position: center;
-  background-size: 23px 13px;
+  background-image: url(../img/eye.svg), url(../img/line.svg);
+  background-position: center, center;
+  background-size: 23px 13px, 19px 19px;
+  background-repeat: no-repeat, no-repeat;
   border: 0;
   background-color: transparent;
 }
 
 .password__input {
   padding-right: 40px;
+}
+
+.password__label {
+  display: none;
+  position: absolute;
+  padding: 0 4px;
+  left: 10px;
+  top: -7px;
+  background-color: #fff;
+  color: #237BEF;
+  font-size: 10px;
 }
 
 .button {
