переработал бем блок инпута, сделал анимацию лейбла

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,7 @@
 @import "_variables.scss";
 @import "_config.scss";
 @import "blocks/_overlay.scss";
-@import "blocks/_input.scss";
+@import "blocks/_input-block.scss";
 @import "blocks/_auth-form.scss";
-@import "blocks/_password.scss";
 @import "blocks/_button.scss";
 @import "blocks/_link.scss";
