--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,27 @@ body {
   background-color: rgba(0, 0, 0, 0.85);
 }
 
-.input {
+.input-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  max-width: 330px;
+}
+
+.input-block__label {
+  display: block;
+  position: absolute;
+  padding: 0 4px;
+  left: 8px;
+  top: 12px;
+  background-color: #fff;
+  color: #A0A0A0;
+  -webkit-transition: ease-in-out all 0.3s;
+  transition: ease-in-out all 0.3s;
+}
+
+.input-block__input {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   outline: none;
@@ -38,39 +58,45 @@ body {
   border-top-right-radius: 4px;
 }
 
-.input:focus {
+.input-block__input:focus {
   border: 1px solid #237BEF;
 }
 
-.input:focus::-webkit-input-placeholder {
-  font-size: 0;
+.input-block__input:focus + .input-block__label {
+  color: #237BEF;
+  font-size: 10px;
+  -webkit-transform: translateY(-17px);
+          transform: translateY(-17px);
 }
 
-.input:focus:-ms-input-placeholder {
-  font-size: 0;
+.input-block__toggle {
+  position: absolute;
+  right: 10px;
+  top: 13px;
+  cursor: pointer;
+  width: 23px;
+  height: 13px;
+  background-image: url(../img/eye.svg), url(../img/line.svg);
+  background-position: center, center;
+  background-size: 23px 13px, 19px 19px;
+  background-repeat: no-repeat, no-repeat;
+  border: 0;
+  background-color: transparent;
 }
 
-.input:focus::-ms-input-placeholder {
-  font-size: 0;
+.input-block--password input {
+  padding-right: 40px;
 }
 
-.input:focus::placeholder {
-  font-size: 0;
-}
-
-.input:focus + label {
-  display: block;
-}
-
-.input--error {
+.input-block--error .input-block__input {
   border: 1px solid #EB5757;
 }
 
-.input--error:focus {
+.input-block--error .input-block__input:focus {
   border: 1px solid #EB5757;
 }
 
-.input--preloading {
+.input-block--preloading .input-block__input {
   border: 1px solid rgba(35, 123, 239, 0.5);
 }
 
@@ -106,29 +132,10 @@ body {
   margin-bottom: 30px;
 }
 
-.auth-form__label {
-  display: none;
-  position: absolute;
-  padding: 0 4px;
-  left: 10px;
-  top: -7px;
-  background-color: #fff;
-  color: #237BEF;
-  font-size: 10px;
-}
-
 .auth-form__button {
   display: block;
   margin: 0 auto;
   margin-bottom: 24px;
-}
-
-.auth-form__input-wrapper {
-  position: relative;
-}
-
-.auth-form__password {
-  margin-bottom: 30px;
 }
 
 .auth-form__linkwrapper {
@@ -199,33 +206,6 @@ body {
   .auth-form__close::before, .auth-form__close::after {
     background-color: #191A39;
   }
-}
-
-.password {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  max-width: 330px;
-}
-
-.password__toggle {
-  position: absolute;
-  right: 10px;
-  top: 13px;
-  cursor: pointer;
-  width: 23px;
-  height: 13px;
-  background-image: url(../img/eye.svg), url(../img/line.svg);
-  background-position: center, center;
-  background-size: 23px 13px, 19px 19px;
-  background-repeat: no-repeat, no-repeat;
-  border: 0;
-  background-color: transparent;
-}
-
-.password__input {
-  padding-right: 40px;
 }
 
 .button {
